--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/glob": "^7.1.1",
     "class-validator": "^0.11.1",
     "glob": "^7.1.6",
+    "prettier": "^2.0.5",
     "typescript": "^3.9.3"
   },
   "scripts": {
@@ -18,5 +19,8 @@
   },
   "bin": {
     "class-validator-gen": "./bin/index.js"
+  },
+  "devDependencies": {
+    "@types/prettier": "^2.0.1"
   }
 }
